# aois_module

./: .dockerignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  NEWS.rst  README.rst  pyproject.toml  ruff.toml  setup.cfg
docs/: index.rst
src/pupil_labs/aois_module/: _AOIs.py  __init__.py  _defineAOIs.py  _helpers.py  _models.py  _parser.py  _report.py  _to_cloud.py  test_sam.py
src/pupil_labs/aois_module/static/: index.html
src/pupil_labs/aois_module/static/css/: styles.css
src/pupil_labs/aois_module/static/js/: scripts.js
tests/: test_api.py  test_dino_sam.py
