[metadata]
name = pupil_labs_aois_module
description = Define AOIs in the Reference Image Mapper enrichment manually or using SAM.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/aois-module
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
install_requires =
    importlib-metadata;python_version<"3.8"
	opencv-python
	pycocotools
	onnxruntime
	onnx
	seaborn
	pandas==2.0.2
	numpy
	matplotlib
	torch
	torchvision
	rich
	pycocotools
	segment-anything
	groundingdino-py
	huggingface_hub
	reportlab

python_requires = >=3.7
include_package_data = true
package_dir =
    =src

[options.entry_points]
console_scripts =
    pl-aois = pupil_labs.aois_module._defineAOIs:main

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.extras_require]
docs =
    jaraco.packaging>=9
    rst.linker>=1.9
    sphinx
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.3
    pytest-mypy>=0.9.1;python_implementation != "PyPy"
