[metadata]
name = pupil_labs_aois_module
description = Define AOIs in the Reference Image Mapper enrichment manually or using SAM.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/aois-module
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
install_requires =
	uvicorn
	nest_asyncio
	fastapi
    fastapi_utils
	opencv-python-headless
	pycocotools
	onnxruntime
	onnx
	pandas
	numpy
	rich
	pycocotools
	segment-anything
	groundingdino-py
	huggingface_hub
	python-multipart

python_requires = >=3.10
include_package_data = true
package_dir =
    =src

[options.entry_points]
console_scripts =
    pl-aois = pupil_labs.aois_module._defineAOIs:main

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1
	ruff
	uv
	# local

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

with_torch =
	torch
	torchvision
